Started work on pedestal

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,5 @@ notifications:
     on_success: always
     on_failure: always
     skip_join: true
+    template:
+      - "%{repository_slug}#%{build_number} (%{branch} - %{commit}): %{message}"
