Started villager rework. Added hunter faction villager with trades

--- a/src/main/resources/vampirism_at.cfg
+++ b/src/main/resources/vampirism_at.cfg
@@ -4,3 +4,5 @@ public net.minecraft.entity.ai.EntityAIAttackMelee field_75438_g # entityPathEnt
 public net.minecraft.pathfinding.PathNavigateGround field_179694_f # shouldAvoidSun
 public net.minecraft.village.Village field_75586_a # world
 public net.minecraft.advancements.CriteriaTriggers func_192118_a(Lnet/minecraft/advancements/ICriterionTrigger;)Lnet/minecraft/advancements/ICriterionTrigger; # register
+protected net.minecraft.entity.passive.EntityVillager field_70963_i #buyingList
+protected net.minecraft.entity.passive.EntityVillager func_175554_cu()V #populateBuyingList
