--- a/src/main/resources/vampirism_at.cfg
+++ b/src/main/resources/vampirism_at.cfg
@@ -6,3 +6,4 @@ public net.minecraft.village.Village field_75586_a # world
 public net.minecraft.advancements.CriteriaTriggers func_192118_a(Lnet/minecraft/advancements/ICriterionTrigger;)Lnet/minecraft/advancements/ICriterionTrigger; # register
 protected net.minecraft.entity.passive.EntityVillager field_70963_i #buyingList
 protected net.minecraft.entity.passive.EntityVillager func_175554_cu()V #populateBuyingList
+public net.minecraft.entity.player.PlayerCapabilities field_75096_f # flySpeed
