--- a/src/main/resources/vampirism_at.cfg
+++ b/src/main/resources/vampirism_at.cfg
@@ -7,3 +7,6 @@ public net.minecraft.advancements.CriteriaTriggers func_192118_a(Lnet/minecraft/
 protected net.minecraft.entity.passive.EntityVillager field_70963_i #buyingList
 protected net.minecraft.entity.passive.EntityVillager func_175554_cu()V #populateBuyingList
 public net.minecraft.entity.player.PlayerCapabilities field_75096_f # flySpeed
+public net.minecraft.world.World func_175663_a(IIIIIIZ)Z # isAreaLoaded
+public net.minecraft.world.gen.structure.StructureVillagePieces func_176069_e(Lnet/minecraft/world/gen/structure/StructureVillagePieces$Start;Ljava/util/List;Ljava/util/Random;IIILnet/minecraft/util/EnumFacing;I)Lnet/minecraft/world/gen/structure/StructureComponent; # generateAndAddRoadPiece
+public net.minecraft.village.Village func_179862_a(Lnet/minecraft/util/math/BlockPos;III)Lnet/minecraft/util/math/Vec3d; # findRandomSpawnPos
