--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 #29.07.14 17:00
 minecraft_version=1.12.2
 forge_version=14.23.5.2768
-mappings=snapshot_20171003
+mappings=stable_39
 main_version=1
 major_version=5
 minor_version=0
