Fix advanced player skins not loading. Fix 416

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -15,3 +15,5 @@ protected net.minecraft.inventory.container.AbstractFurnaceContainer field_21706
 protected net.minecraft.inventory.container.Container field_75153_a # inventoryItemStacks
 protected net.minecraft.inventory.container.AbstractFurnaceContainer field_217064_e
 public net.minecraft.block.Block$Properties func_200946_b()Lnet/minecraft/block/Block$Properties; # zeroHardnessAndResistance
+public net.minecraft.tileentity.SkullTileEntity field_184298_j # profileCache
+public net.minecraft.tileentity.SkullTileEntity field_184299_k # sessionService
