--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx3G
 #29.07.14 17:00
 minecraft_version=1.13.2
 forge_version=25.0.219
-mcp_mappings=20180921-1.13
+mcp_mappings=47-1.13.2
 main_version=1
 major_version=6
 minor_version=0
