--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -43,7 +43,7 @@ dependencies {
 }
 
 minecraft {
-    mappings channel: "snapshot", version: "${project.mcp_mappings}".toString()
+    mappings channel: "stable", version: "${project.mcp_mappings}".toString()
     accessTransformer = file('/src/main/resources/vampirism_at.cfg')
 
     runs {
