--- a/src/main/resources/META-INF/vampirism_at.cfg
+++ b/src/main/resources/META-INF/vampirism_at.cfg
@@ -1,12 +1,15 @@
-public net.minecraft.entity.player.EntityPlayer func_175139_a(Lnet/minecraft/util/EnumFacing;)V # setRenderOffsetForSleep
-public net.minecraft.util.FoodStats field_75126_c # foodExhaustionLevel
+public net.minecraft.entity.player.EntityPlayer func_175139_a(Lnet/minecraft/util/EnumFacing;)V # setRenderOffsetForSleeppublic net.minecraft.util.FoodStats field_75126_c # foodExhaustionLevel
 public net.minecraft.entity.ai.EntityAIAttackMelee field_75438_g # entityPathEntity
 public net.minecraft.pathfinding.PathNavigateGround field_179694_f # shouldAvoidSun
 public net.minecraft.village.Village field_75586_a # world
 public net.minecraft.advancements.CriteriaTriggers func_192118_a(Lnet/minecraft/advancements/ICriterionTrigger;)Lnet/minecraft/advancements/ICriterionTrigger; # register
-protected net.minecraft.entity.passive.EntityVillager field_70963_i #buyingList
-protected net.minecraft.entity.passive.EntityVillager func_175554_cu()V #populateBuyingList
+protected net.minecraft.entity.passive.EntityVillager func_175554_cu()V # populateBuyingList
+protected net.minecraft.entity.passive.EntityVillager field_70963_i # buyingList
 public net.minecraft.entity.player.PlayerCapabilities field_75096_f # flySpeed
 public net.minecraft.world.World func_175663_a(IIIIIIZ)Z # isAreaLoaded
 public net.minecraft.world.gen.structure.StructureVillagePieces func_176069_e(Lnet/minecraft/world/gen/structure/StructureVillagePieces$Start;Ljava/util/List;Ljava/util/Random;IIILnet/minecraft/util/EnumFacing;I)Lnet/minecraft/world/gen/structure/StructureComponent; # generateAndAddRoadPiece
 public net.minecraft.village.Village func_179862_a(Lnet/minecraft/util/math/BlockPos;III)Lnet/minecraft/util/math/Vec3d; # findRandomSpawnPos
+
+##New in 1.13
+
+public net.minecraft.entity.passive.EntitySheep field_200206_bz # WOOL_BY_COLOR
