All compile errors fixed

--- a/src/main/resources/META-INF/vampirism_at.cfg
+++ b/src/main/resources/META-INF/vampirism_at.cfg
@@ -1,4 +1,5 @@
-public net.minecraft.entity.player.EntityPlayer func_175139_a(Lnet/minecraft/util/EnumFacing;)V # setRenderOffsetForSleeppublic net.minecraft.util.FoodStats field_75126_c # foodExhaustionLevel
+public net.minecraft.entity.player.EntityPlayer func_175139_a(Lnet/minecraft/util/EnumFacing;)V # setRenderOffsetForSleep
+public net.minecraft.util.FoodStats field_75126_c # foodExhaustionLevel
 public net.minecraft.entity.ai.EntityAIAttackMelee field_75438_g # entityPathEntity
 public net.minecraft.pathfinding.PathNavigateGround field_179694_f # shouldAvoidSun
 public net.minecraft.village.Village field_75586_a # world
@@ -13,3 +14,5 @@ public net.minecraft.village.Village func_179862_a(Lnet/minecraft/util/math/Bloc
 ##New in 1.13
 
 public net.minecraft.entity.passive.EntitySheep field_200206_bz # WOOL_BY_COLOR
+public net.minecraft.client.renderer.entity.model.ModelVillager field_78191_a # villagerHead
+public net.minecraft.entity.player.EntityPlayer eyeHeight
