--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -51,9 +51,19 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             workingDirectory project.file('run').canonicalPath
-            source sourceSets.main
-            source sourceSets.lib
-            source sourceSets.api
+
+            mods {
+                teamlapenlib {
+                    source sourceSets.lib
+                }
+                vampirism {
+                    source sourceSets.main
+                    source sourceSets.api
+                }
+
+
+            }
+
         }
         server = {
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -75,12 +85,29 @@ processResources {
         expand 'version': project.version, 'mcversion': minecraft_version, 'forge_version': forge_version
     }
 
+
+
     from(sourceSets.main.resources.srcDirs) {
         exclude 'META-INF/mods.toml'
     }
 
+
+
     exclude '**/Thumbs.db'
 }
+
+processLibResources {
+    from(sourceSets.lib.resources.srcDirs) {
+        include 'META-INF/mods.toml'
+
+        expand 'version': project.version, 'mcversion': minecraft_version, 'forge_version': forge_version
+    }
+    from(sourceSets.lib.resources.srcDirs) {
+        exclude 'META-INF/mods.toml'
+    }
+}
+
+
 
 
 jar {
@@ -93,15 +120,26 @@ jar {
     from sourceSets.main.output.resourcesDir
     from sourceSets.api.output.resourcesDir
     from sourceSets.lib.output.resourcesDir
-
+    
     from{
         fileTree('build/translations').matching{
             exclude "**/en_US.lang"
         }
     }
 
+
+
     manifest {
-      attributes 'FMLAT':'vampirism_at.cfg'
+        attributes([
+                "FMLAT": "vampirism_at.cfg",
+                "Specification-Title": "vampirism",
+                "Specification-Vendor": "maxanier",
+                "Specification-Version": "1", // We are version 1 of ourselves
+                "Implementation-Title": project.name,
+                "Implementation-Version": "${version}",
+                "Implementation-Vendor" :"maxanier",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
     }
 
 }
