nearly last compile errors

--- a/src/main/resources/META-INF/vampirism_at.cfg
+++ b/src/main/resources/META-INF/vampirism_at.cfg
@@ -1,5 +1,4 @@
 public net.minecraft.util.FoodStats field_75126_c # foodExhaustionLevel
-#public net.minecraft.advancements.CriteriaTriggers func_192118_a(Lnet/minecraft/advancements/ICriterionTrigger;)Lnet/minecraft/advancements/ICriterionTrigger; # register
 
 ##New in 1.14
 public net.minecraft.entity.passive.SheepEntity field_200206_bz # WOOL_BY_COLOR
@@ -9,3 +8,6 @@ public net.minecraft.client.particle.ParticleManager field_215243_j # atlas
 public net.minecraft.entity.Entity field_213326_aJ # eyeHeight
 public net.minecraft.entity.EntitySpawnPlacementRegistry func_209343_a(Lnet/minecraft/entity/EntityType;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$PlacementType;Lnet/minecraft/world/gen/Heightmap$Type;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$IPlacementPredicate;)V # register
 public net.minecraft.world.storage.loot.LootTables func_186375_a(Lnet/minecraft/util/ResourceLocation;)Lnet/minecraft/util/ResourceLocation; # register
+public net.minecraft.entity.Entity field_213325_aI # size
+public net.minecraft.pathfinding.GroundPathNavigator field_179694_f # shouldAvoidSun
+public net.minecraft.entity.ai.goal.MeleeAttackGoal field_75438_g # path
