--- a/src/main/resources/META-INF/vampirism_at.cfg
+++ b/src/main/resources/META-INF/vampirism_at.cfg
@@ -11,3 +11,5 @@ public net.minecraft.world.storage.loot.LootTables func_186375_a(Lnet/minecraft/
 public net.minecraft.entity.Entity field_213325_aI # size
 public net.minecraft.pathfinding.GroundPathNavigator field_179694_f # shouldAvoidSun
 public net.minecraft.entity.ai.goal.MeleeAttackGoal field_75438_g # path
+protected net.minecraft.inventory.container.AbstractFurnaceContainer field_217063_d # furnaceInventory
+protected net.minecraft.inventory.container.Container field_75153_a # inventoryItemStacks
