--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,5 +20,5 @@ issueTrackerURL="https://github.com/TeamLapen/Vampirism/issues"
         modId="teamlapenlib"
         mandatory=true
         versionRange="[${version},)"
-        ordering="NONE"
+        ordering="AFTER"
         side="BOTH"
