--- a/src/main/resources/META-INF/vampirism_at.cfg
+++ b/src/main/resources/META-INF/vampirism_at.cfg
@@ -13,3 +13,4 @@ public net.minecraft.pathfinding.GroundPathNavigator field_179694_f # shouldAvoi
 public net.minecraft.entity.ai.goal.MeleeAttackGoal field_75438_g # path
 protected net.minecraft.inventory.container.AbstractFurnaceContainer field_217063_d # furnaceInventory
 protected net.minecraft.inventory.container.Container field_75153_a # inventoryItemStacks
+protected net.minecraft.inventory.container.AbstractFurnaceContainer field_217064_e
