fluids finished(except bloodcontainer), vampire_orchid pottable, some stuff

--- a/src/main/resources/META-INF/vampirism_at.cfg
+++ b/src/main/resources/META-INF/vampirism_at.cfg
@@ -14,3 +14,4 @@ public net.minecraft.entity.ai.goal.MeleeAttackGoal field_75438_g # path
 protected net.minecraft.inventory.container.AbstractFurnaceContainer field_217063_d # furnaceInventory
 protected net.minecraft.inventory.container.Container field_75153_a # inventoryItemStacks
 protected net.minecraft.inventory.container.AbstractFurnaceContainer field_217064_e
+public net.minecraft.block.Block$Properties func_200946_b()Lnet/minecraft/block/Block$Properties; # zeroHardnessAndResistance
