--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ buildscript {
 }
 
 
-
 plugins {
     id 'com.matthewprenger.cursegradle' version '1.2.0'
+    id 'de.undercouch.download' version '3.3.0'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
