f76776ac39667805d933903d7cff60de4d5da933

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -17,3 +17,4 @@ protected net.minecraft.inventory.container.AbstractFurnaceContainer field_21706
 public net.minecraft.block.Block$Properties func_200946_b()Lnet/minecraft/block/Block$Properties; # zeroHardnessAndResistance
 public net.minecraft.tileentity.SkullTileEntity field_184298_j # profileCache
 public net.minecraft.tileentity.SkullTileEntity field_184299_k # sessionService
+public net.minecraft.entity.LivingEntity field_70713_bf # activePotionsMap
