--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -18,3 +18,4 @@ public net.minecraft.block.Block$Properties func_200946_b()Lnet/minecraft/block/
 public net.minecraft.tileentity.SkullTileEntity field_184298_j # profileCache
 public net.minecraft.tileentity.SkullTileEntity field_184299_k # sessionService
 public net.minecraft.entity.LivingEntity field_70713_bf # activePotionsMap
+public net.minecraft.entity.ai.goal.NearestAttackableTargetGoal field_75307_b # targetClass
