functional Totem tileentity & village capture command & updated faction villager (#522)
* recode TotemTileEntity,
removed FactionVillager for VillageProfessions & Tradelists(maybe modify profession textures),
fixed aggressive villager (maybe other texture),
moved all villagetrades to ModVillage,
converted villager schedule is 12000 ticks (a half day) turned,
village capture command

* fix

* Fix weapons.
Increase durability of obsidian armor and vampire swords

* More improvements

* Fix spawns

* Add 1.14 warning

* addition

* More improvements

* Fix spawns

* Update 1.14 warning
Remove spawn eggs again

* Update travis

* moved trades,
make agressive fix

* moved trades,
makeAgressive fix
modified trades,
bug fixes

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -19,3 +19,16 @@ public net.minecraft.tileentity.SkullTileEntity field_184298_j # profileCache
 public net.minecraft.tileentity.SkullTileEntity field_184299_k # sessionService
 public net.minecraft.entity.LivingEntity field_70713_bf # activePotionsMap
 public net.minecraft.entity.ai.goal.NearestAttackableTargetGoal field_75307_b # targetClass
+
+##for getting village structure
+public net.minecraft.world.gen.feature.structure.Structure func_202364_a(Lnet/minecraft/world/IWorld;Lnet/minecraft/util/math/BlockPos;Z)Lnet/minecraft/world/gen/feature/structure/StructureStart; # getStart
+
+##override in ConvertedVillager
+protected net.minecraft.entity.merchant.villager.VillagerEntity func_213744_a(Lnet/minecraft/entity/ai/brain/Brain;)V # initBrain
+
+##registering of PointOfInterestType
+public net.minecraft.village.PointOfInterestType func_221052_a(Lnet/minecraft/village/PointOfInterestType;)Lnet/minecraft/village/PointOfInterestType; # func_221052_a
+
+##village trades
+public net.minecraft.entity.merchant.villager.VillagerTrades$ItemsForEmeraldsTrade
+public net.minecraft.entity.merchant.villager.VillagerTrades$EmeraldForItemsTrade
