Fixed batmode rendering. Fixed batmode warning messages Fixed altar infusion ritual not ending. Cleanup

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,5 @@
 public net.minecraft.util.FoodStats field_75126_c # foodExhaustionLevel
 
-##New in 1.14
 public net.minecraft.entity.passive.SheepEntity field_200206_bz # WOOL_BY_COLOR
 protected net.minecraft.inventory.container.Container field_75149_d # listeners
 public net.minecraft.entity.ai.goal.GoalSelector field_220892_d # goals
@@ -19,6 +18,7 @@ public net.minecraft.tileentity.SkullTileEntity field_184298_j # profileCache
 public net.minecraft.tileentity.SkullTileEntity field_184299_k # sessionService
 public net.minecraft.entity.LivingEntity field_70713_bf # activePotionsMap
 public net.minecraft.entity.ai.goal.NearestAttackableTargetGoal field_75307_b # targetClass
+public net.minecraft.entity.player.PlayerAbilities field_75096_f # flySpeed
 
 ##for getting village structure
 public net.minecraft.world.gen.feature.structure.Structure func_202364_a(Lnet/minecraft/world/IWorld;Lnet/minecraft/util/math/BlockPos;Z)Lnet/minecraft/world/gen/feature/structure/StructureStart; # getStart
