--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -32,3 +32,5 @@ public net.minecraft.village.PointOfInterestType func_221052_a(Lnet/minecraft/vi
 ##village trades
 public net.minecraft.entity.merchant.villager.VillagerTrades$ItemsForEmeraldsTrade
 public net.minecraft.entity.merchant.villager.VillagerTrades$EmeraldForItemsTrade
+
+public net.minecraft.item.crafting.RecipeManager func_215366_a(Lnet/minecraft/item/crafting/IRecipeType;)Ljava/util/Map; # getRecipes
