--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 plugins {
     id 'com.matthewprenger.cursegradle' version '1.2.0'
     id 'de.undercouch.download' version '3.3.0'
+    id 'com.wynprice.cursemaven' version '2.1.1'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
