--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -34,3 +34,6 @@ public net.minecraft.entity.merchant.villager.VillagerTrades$ItemsForEmeraldsTra
 public net.minecraft.entity.merchant.villager.VillagerTrades$EmeraldForItemsTrade
 
 public net.minecraft.item.crafting.RecipeManager func_215366_a(Lnet/minecraft/item/crafting/IRecipeType;)Ljava/util/Map; # getRecipes
+public net.minecraft.entity.merchant.villager.VillagerProfession <init>(Ljava/lang/String;Lnet/minecraft/village/PointOfInterestType;Lcom/google/common/collect/ImmutableSet;Lcom/google/common/collect/ImmutableSet;Lnet/minecraft/util/SoundEvent;)V
+public net.minecraft.village.PointOfInterestType <init>(Ljava/lang/String;Ljava/util/Set;II)V
+public net.minecraft.village.PointOfInterestType <init>(Ljava/lang/String;Ljava/util/Set;ILjava/util/function/Predicate;I)V
