--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -19,10 +19,6 @@ repositories {
         name = "LocalForge"
         url = "../../MinecraftForge/repo/"
     }
-//    maven {
-//        name = "CurseForge"
-//        url = "https://minecraft.curseforge.com/api/maven/"
-//    }
     maven {
         name 'shinoow'
         url 'https://dl.bintray.com/shinoow/maven/'
@@ -40,6 +36,9 @@ dependencies {
     compileOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}:api") //API for compile
     runtimeOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}") //Full for runtime
 
+    //runtimeOnly fg.deobf("curse.maven:angel-of-vengeance:2810906")
+    //deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
+    //deobfCompile 'Waila:Waila:1.7.1_1.11.2' //Backup Waila on curseforge
     //deobf 'info.amerifrance.guideapi:Guide-API:${guide_api_version}'
 
 
@@ -59,15 +58,11 @@ minecraft {
             jvmArg '-ea:de.teamlapen...'
             
             mods {
-
                 vampirism {
                     source sourceSets.main
                     source sourceSets.api
                     source sourceSets.lib
-
                 }
-
-
             }
 
         }
