--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -37,3 +37,5 @@ public net.minecraft.item.crafting.RecipeManager func_215366_a(Lnet/minecraft/it
 public net.minecraft.entity.merchant.villager.VillagerProfession <init>(Ljava/lang/String;Lnet/minecraft/village/PointOfInterestType;Lcom/google/common/collect/ImmutableSet;Lcom/google/common/collect/ImmutableSet;Lnet/minecraft/util/SoundEvent;)V
 public net.minecraft.village.PointOfInterestType <init>(Ljava/lang/String;Ljava/util/Set;II)V
 public net.minecraft.village.PointOfInterestType <init>(Ljava/lang/String;Ljava/util/Set;ILjava/util/function/Predicate;I)V
+
+public net.minecraft.world.gen.feature.jigsaw.JigsawPattern field_214953_e # jigsawPieces
