extend jigsaw asmhook to hunter_trainer houses

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -38,4 +38,7 @@ public net.minecraft.entity.merchant.villager.VillagerProfession <init>(Ljava/la
 public net.minecraft.village.PointOfInterestType <init>(Ljava/lang/String;Ljava/util/Set;II)V
 public net.minecraft.village.PointOfInterestType <init>(Ljava/lang/String;Ljava/util/Set;ILjava/util/function/Predicate;I)V
 
+##allow for adding custom JigsawPieces to existing JigsawPattern
 public net.minecraft.world.gen.feature.jigsaw.JigsawPattern field_214953_e # jigsawPieces
+
+public net.minecraft.world.gen.feature.jigsaw.JigsawManager$Assembler
