--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,9 +7,10 @@ issueTrackerURL="https://github.com/TeamLapen/Vampirism/issues"
     namespace="vampirism"
     version="${version}"
     displayName="Vampirism"
-    authors="Maxanier"
+    authors="Maxanier, Cheaterpaul"
+    credits="TinkerHatWill (textures), Alis (textures), dimensionpainter (textures), S_olace (textures), Mistadon (code/models), wildbill22 (code), LRA_10 (models/textures)"
     description="Allows you to become a vampire"
-    displayURL="https://minecraft.curseforge.com/projects/vampirism-become-a-vampire"
+    displayURL="https://vampirism.maxanier.de"
     [[dependencies.vampirism]]
         modId="forge"
         mandatory=true
@@ -27,9 +28,9 @@ issueTrackerURL="https://github.com/TeamLapen/Vampirism/issues"
     namespace="teamlapenlib"
     version="${version}"
     displayName="Teamlapen Library"
-    authors="Maxanier"
+    authors="Maxanier, Cheaterpaul"
     description="Required by Vampirism"
-    displayURL="https://minecraft.curseforge.com/projects/vampirism-become-a-vampire"
+    displayURL="https://vampirism.maxanier.de"
     [[dependencies.teamlapen-lib]]
         modId="forge"
         mandatory=true
