--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,6 +11,7 @@ issueTrackerURL="https://github.com/TeamLapen/Vampirism/issues"
     credits="TinkerHatWill (textures), Alis (textures), dimensionpainter (textures), S_olace (textures), Mistadon (code/models), wildbill22 (code), LRA_10 (models/textures)"
     description="Allows you to become a vampire"
     displayURL="https://vampirism.maxanier.de"
+    updateJSONURL="https://maxanier.de/projects/vampirism/versions.json"
     [[dependencies.vampirism]]
         modId="forge"
         mandatory=true
