--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,9 +8,10 @@ issueTrackerURL="https://github.com/TeamLapen/Vampirism/issues"
     version="${version}"
     displayName="Vampirism"
     authors="Maxanier, Cheaterpaul"
-    credits="TinkerHatWill (textures), Alis (textures), dimensionpainter (textures), S_olace (textures), Mistadon (code/models), wildbill22 (code), LRA_10 (models/textures)"
+    credits="TinkerHatWill (textures), Alis (textures), dimensionpainter (textures), S_olace (textures), Mistadon (code/models), wildbill22 (code), LRA_10 (models/textures), freesound.org (sounds), freeSFX.co.uk (sounds)"
     description="Allows you to become a vampire"
     displayURL="https://vampirism.maxanier.de"
+    logoFile="logo.png"
     updateJSONURL="https://maxanier.de/projects/vampirism/versions.json"
     [[dependencies.vampirism]]
         modId="forge"
