add AdvancementGenerator for datageneration

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -42,3 +42,5 @@ public net.minecraft.village.PointOfInterestType <init>(Ljava/lang/String;Ljava/
 public net.minecraft.world.gen.feature.jigsaw.JigsawPattern field_214953_e # jigsawPieces
 
 public net.minecraft.world.gen.feature.jigsaw.JigsawManager$Assembler
+
+protected-f net.minecraft.data.AdvancementProvider field_204283_d # advancements
