--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -43,4 +43,4 @@ public net.minecraft.world.gen.feature.jigsaw.JigsawPattern field_214953_e # jig
 
 public net.minecraft.world.gen.feature.jigsaw.JigsawManager$Assembler
 
-protected-f net.minecraft.data.AdvancementProvider field_204283_d # advancements
+public-f net.minecraft.data.AdvancementProvider field_204283_d # advancements
