--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -40,6 +40,7 @@ public net.minecraft.village.PointOfInterestType <init>(Ljava/lang/String;Ljava/
 
 ##allow for adding custom JigsawPieces to existing JigsawPattern
 public net.minecraft.world.gen.feature.jigsaw.JigsawPattern field_214953_e # jigsawPieces
+public-f net.minecraft.world.gen.feature.jigsaw.JigsawPattern field_214952_d # field_214952_d
 
 public net.minecraft.world.gen.feature.jigsaw.JigsawManager$Assembler
 
