--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ major_version=6
 minor_version=0
 #Dependencies/Optional Libraries
 jei_version=6.0.0.13
-guide_api_version=1.14.3-6.0.0.7
+patchouli_version=1.14.4-1.1-27.140
