Fix sanguinare potion text

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -44,3 +44,4 @@ public net.minecraft.world.gen.feature.jigsaw.JigsawPattern field_214953_e # jig
 public net.minecraft.world.gen.feature.jigsaw.JigsawManager$Assembler
 
 public-f net.minecraft.data.AdvancementProvider field_204283_d # advancements
+public net.minecraft.client.gui.screen.Screen font # font
