Don't override local source translations

--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -156,12 +156,6 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         exclude 'META-INF/mods.toml'
     }
-    from{
-        fileTree('build/translations').matching{
-            exclude "**/en_us.json" //Don't override local file
-        }
-    }
-
 
     exclude '**/Thumbs.db'
 }
@@ -185,6 +179,8 @@ processLibResources {
 
 
 jar {
+    dependsOn 'crowdin'
+
     //Keep the jar as clean as possible
     includeEmptyDirs = false
 
@@ -197,11 +193,10 @@ jar {
     
     from{
         fileTree('build/translations').matching{
-            exclude "**/en_US.lang"
+            exclude "**/en_us.json" //Don't override local source file
         }
     }
 
-    dependsOn 'crowdin'
 
 
     manifest {
