--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -36,12 +36,11 @@ dependencies {
     ])
     compileOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}:api") //API for compile
     runtimeOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}") //Full for runtime
-    compile fg.deobf("info.amerifrance.guideapi:Guide-API:1.14.4-2.2-CUSTOM")
+    compile fg.deobf("info.amerifrance.guideapi:Guide-API:${project.guideapi_version}")
 
     //runtimeOnly fg.deobf("curse.maven:angel-of-vengeance:2810906")
     //deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
     //deobfCompile 'Waila:Waila:1.7.1_1.11.2' //Backup Waila on curseforge
-    //deobf 'info.amerifrance.guideapi:Guide-API:${guide_api_version}'
 
 
 }
