Migrate to Guide-API fork

--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -23,6 +23,9 @@ repositories {
         name 'shinoow'
         url 'https://dl.bintray.com/shinoow/maven/'
     }
+    maven {
+        url = "https://maxanier.de/maven2"
+    }
     mavenCentral()
     mavenLocal()
 }
@@ -36,7 +39,7 @@ dependencies {
     ])
     compileOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}:api") //API for compile
     runtimeOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}") //Full for runtime
-    compile fg.deobf("info.amerifrance.guideapi:Guide-API:${project.guideapi_version}")
+    compile fg.deobf("de.maxanier.guideapi:Guide-API-VP:${project.guideapi_version}")
 
     //runtimeOnly fg.deobf("curse.maven:angel-of-vengeance:2810906")
     //deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
