Add new guide-api curseforge id

--- a/gradle/deploy.gradle
+++ b/gradle/deploy.gradle
@@ -26,7 +26,7 @@ curseforge {
 
         relations {
             optionalLibrary 'jei'
-            optionalLibrary 'guide-api'
+            optionalLibrary 'guide-api-village-and-pillage'
         }
 
     }
