fix wrong files

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -49,7 +49,7 @@ public net.minecraft.client.gui.screen.SleepInMultiplayerScreen func_146418_g()V
 public-f net.minecraft.data.AdvancementProvider field_204283_d # advancements
 public net.minecraft.client.gui.screen.Screen font # font
 
-##recipe stuff
+##recipe generator stuff
 protected net.minecraft.data.ShapedRecipeBuilder field_200475_b #result
 protected net.minecraft.data.ShapedRecipeBuilder field_200476_c #count
 protected net.minecraft.data.ShapedRecipeBuilder field_200477_d #pattern
@@ -57,3 +57,9 @@ protected net.minecraft.data.ShapedRecipeBuilder field_200478_e #key
 protected net.minecraft.data.ShapedRecipeBuilder field_200479_f #advancementBuilder
 protected net.minecraft.data.ShapedRecipeBuilder field_200480_g #group
 protected net.minecraft.data.ShapedRecipeBuilder func_200463_a(Lnet/minecraft/util/ResourceLocation;)V #validate
+protected net.minecraft.data.ShapelessRecipeBuilder field_200497_e #advancementBuilder
+protected net.minecraft.data.ShapelessRecipeBuilder field_200494_b #result
+protected net.minecraft.data.ShapelessRecipeBuilder field_200495_c #count
+protected net.minecraft.data.ShapelessRecipeBuilder field_200498_f #group
+protected net.minecraft.data.ShapelessRecipeBuilder field_200496_d #ingredients
+protected net.minecraft.data.ShapelessRecipeBuilder func_200481_a(Lnet/minecraft/util/ResourceLocation;)V #validate
